k8s/infra/ci-runner/base/kaniko-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-build
  namespace: actions-runner

spec:
  restartPolicy: Never

  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest

    args:
      - --dockerfile=Dockerfile
      - --context=dir:///workspace
      - --destination=docker.io/dans9881/flask-ml:latest

      - --cache=true
      - --cache-repo=docker.io/dans9881/cache

    volumeMounts:
    - name: workspace
      mountPath: /workspace

    - name: docker-config
      mountPath: /kaniko/.docker

  volumes:
  - name: workspace
    emptyDir: {}

  - name: docker-config
    secret:
      secretName: docker-config
