k8s/infra/ci-runner/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-runner
  namespace: actions-runner

spec:
  clusterIP: None
  selector:
    app: github-runner
